fixed layout issue with player buttons

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
 .container {
   max-width: 400px;
   padding-top: 100px;
+  display: inline-block;
 }
 
 .box {
@@ -21,8 +22,8 @@ body {
 }
 
 .buttonContainer {
-  margin: 20px;
-  margin-left: 30px;
+  margin: 50px;
+  margin-left: 50px;
   display: inline-block;
 }
 
